Bug 78864 - Not clear whether picture has been added or removed with record changes
Summary: Not clear whether picture has been added or removed with record changes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.7.2 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Track-Changes-Image
  Show dependency treegraph
 
Reported: 2014-05-18 15:03 UTC by 994phij
Modified: 2021-06-23 09:48 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
example document (11.19 KB, application/vnd.oasis.opendocument.text)
2014-05-18 15:03 UTC, 994phij
Details
Screenshot of the fix (64.81 KB, image/png)
2021-04-30 14:11 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 994phij 2014-05-18 15:03:45 UTC
Created attachment 99277 [details]
example document

Steps to reproduce:

Create a new writer document
insert a picture and anchor it 'as character'
tick Edit -> Changes -> Record
write some text after the picture (as a spacer)
put the cursor immediately after the picture, press backspace, select and copy the picture, and paste it after the text.

It is not clear at first glance whether the image has been moved from the top of the text to the bottom, or vice versa - you have to untick Edit -> Changes -> Show to find out.  It should be clear without looking at the final document.

Also, I found this on 4.1.4.2 and 4.2.3.3.  Am I meant to put the earliest or latest of the two?
Comment 1 Joel Madero 2014-05-21 01:32:33 UTC
Earliest :) Changed version
Comment 2 Yousuf Philips (jay) (retired) 2014-05-29 10:10:54 UTC
Confirmed its also in 3.6 on Linux. Simple remedy would be do have some type of X sign on the image or something like that after it was deleted, as an indication that it has been deleted.
Comment 3 QA Administrators 2015-07-18 17:44:49 UTC Comment hidden (obsolete)
Comment 4 QA Administrators 2016-09-20 10:18:49 UTC Comment hidden (obsolete)
Comment 5 Commit Notification 2021-04-30 13:46:09 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d845b91bcc6eb885c55494d4d4fab4ec09577e1d

tdf#78864 sw track changes: cross out deleted images

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2021-04-30 14:11:06 UTC
Created attachment 171538 [details]
Screenshot of the fix

Flying images, tables etc. anchored as character got a crossing out.
Comment 7 NISZ LibreOffice Team 2021-05-06 09:53:41 UTC
Verified in:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 9df3aa7ea72d61462e430643f2a80906dce4e15b
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-GB
Calc: threaded

Thanks for fixing!