tdf#78864 sw track changes: cross out deleted images

Show Changes mode shows deleted images with crossing
out to allow differentiate deleted and inserted images
during change tracking.

See also commit d6322bcedc197a654abc7d64bfea8cf570f123bf
(tdf#59463 track changes: record deletion of images).

Change-Id: If9bc2252c6cdd06cbe267fe130023c416aa53ce7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114906
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit d845b91bcc6eb885c55494d4d4fab4ec09577e1d)