sw/source/core/text/porfly.cxx
@@ -38,6 +38,7 @@
 #include "inftxt.hxx"
 
 #include <sortedobjs.hxx>
+#include <officecfg/Office/Common.hxx>
 
 /**
  * class SwFlyPortion => we expect a frame-locale SwRect!
@@ -222,6 +223,25 @@ void sw::FlyContentPortion::Paint(const SwTextPaintInfo& rInf) const
     {
         SwLayoutModeModifier aLayoutModeModifier(*rInf.GetOut());
         m_pFly->PaintSwFrame(const_cast<vcl::RenderContext&>(*rInf.GetOut()), aRect);
+
+        // track changes: cross out the image, if it is deleted
+        const SwFrame *pFrame = m_pFly->Lower();
+        if ( IsDeleted() && pFrame )
+        {
+            SwRect aPaintRect( pFrame->GetPaintArea() );
+
+            const AntialiasingFlags nFormerAntialiasing( rInf.GetOut()->GetAntialiasing() );
+            const bool bIsAntiAliasing = officecfg::Office::Common::Drawinglayer::AntiAliasing::get();
+            if ( bIsAntiAliasing )
+                const_cast<vcl::RenderContext&>(*rInf.GetOut()).SetAntialiasing(AntialiasingFlags::Enable);
+            tools::Long startX = aPaintRect.Left(  ), endX = aPaintRect.Right();
+            tools::Long startY = aPaintRect.Top(  ),  endY = aPaintRect.Bottom();
+            const_cast<vcl::RenderContext&>(*rInf.GetOut()).SetLineColor(NON_PRINTING_CHARACTER_COLOR);
+            const_cast<vcl::RenderContext&>(*rInf.GetOut()).DrawLine(Point(startX, startY), Point(endX, endY));
+            const_cast<vcl::RenderContext&>(*rInf.GetOut()).DrawLine(Point(startX, endY), Point(endX, startY));
+            if ( bIsAntiAliasing )
+                const_cast<vcl::RenderContext&>(*rInf.GetOut()).SetAntialiasing(nFormerAntialiasing);
+        }
     }
     const_cast<SwTextPaintInfo&>(rInf).GetRefDev()->SetLayoutMode(rInf.GetOut()->GetLayoutMode());
 
