sw/source/core/text/porfly.hxx
@@ -44,7 +44,8 @@ public:
 class SwFlyCntPortion : public SwLinePortion
 {
     Point m_aRef;     // Relatively to this point we calculate the AbsPos
-    bool m_bMax;   // Line adjustment and height == line height
+    bool m_bMax;      // Line adjustment and height == line height
+    bool m_bDeleted;  // Part of tracked deletion: it needs strikethrough
     sw::LineAlign m_eAlign;
 
     virtual SdrObject* GetSdrObj(const SwTextFrame&) =0;
@@ -53,9 +54,11 @@ public:
     SwFlyCntPortion();
     const Point& GetRefPoint() const { return m_aRef; }
     bool IsMax() const { return m_bMax; }
+    bool IsDeleted() const { return m_bDeleted; }
     sw::LineAlign GetAlign() const { return m_eAlign; }
     void SetAlign(sw::LineAlign eAlign) { m_eAlign = eAlign; }
     void SetMax(bool bMax) { m_bMax = bMax; }
+    void SetDeleted(bool bDeleted) { m_bDeleted = bDeleted; }
     void SetBase(const SwTextFrame& rFrame, const Point& rBase, tools::Long nLnAscent, tools::Long nLnDescent, tools::Long nFlyAscent, tools::Long nFlyDescent, AsCharFlags nFlags);
     virtual bool Format(SwTextFormatInfo& rInf) override;
 };
